# rust-kickstart-template

./: README.md  template.toml
{{ project_name }}/: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  justfile
{{ project_name }}/.config/: nextest.toml
{{ project_name }}/.github/workflows/: flake_ci.yml
{{ project_name }}/src/: cli.rs  main.rs
