[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2021"
description = "{{ project_description }}"

{% if license == "mit-plus-apache-2" -%}
license = "MIT OR Apache-2.0"
{%- else -%}
license-file = "LICENSE"
{%- endif %}

[dependencies]
{%- if application_type == "empty" -%}
{%- elif application_type == "cli" %}
clap = { version = "4.2.2", features = ["derive"]}
color-eyre = "0.6.1"
directories = "5.0.0"
eyre = "0.6.7"
knuffel = "3.2.0"
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
{%- endif %}

{% if add_sbom -%}
[package.metadata.cyclonedx]
format = "json"
included_dependencies = "all"
output_options = { cdx = true, pattern = "package" }
{%- endif %}
