[package]
name = "{{ project_name }}"
version = "0.1.0"
edition = "2021"
description = "{{ project_description }}"

{% if license == "mit-plus-apache-2" -%}
license = "MIT OR Apache-2.0"
{%- else -%}
license-file = "LICENSE"
{%- endif %}

[dependencies]
{%- if application_type == "empty" -%}
{%- elif application_type == "cli" %}
clap = { version = "4.5.27", features = ["derive"]}
color-eyre = "0.6.3"
directories = "6.0.0"
eyre = "0.6.12"
knuffel = "3.2.0"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
{%- endif %}
